lobster-lua/src/snapshots/lobster_lua__parser__tests__break_break_mic_check_do_you_read.snap
---
source: src/parser.rs
expression: result
---
- If:
    cond: Nil
    then:
      - Break
    else:
      - If:
          cond: Nil
          then:
            - Break
            - Break
          else:
            - Break
            - Break
            - Break
