lobster-lua/src/snapshots/lobster_lua__parser__tests__parse_assigment.snap
---
source: src/parser.rs
assertion_line: 717
expression: result
---
- Assignment:
    lhs:
      Var: foobar
    rhs:
      Numeral: 1
    local: false
