lobster-lua/src/snapshots/lobster_lua__parser__tests__parse_func_call.snap
---
source: src/parser.rs
assertion_line: 719
expression: result
---
- Expr:
    expr:
      FunctionCall:
        callee:
          Var: frobnicate
        args:
          - Numeral: 22
          - String: Foo Bar
