lobster-lua/src/snapshots/lobster_lua__parser__tests__parse_lobster_emoji_identifier.snap
---
source: src/parser.rs
expression: result
---
- Assignment:
    variable: 🦞
    value:
      Numeral: 1
    local: false
