lobster-lua/src/snapshots/lobster_lua__parser__tests__precedence_and_left_associative.snap
---
source: src/parser.rs
expression: result
---
- Assignment:
    variable: x
    value:
      BinOp:
        op: And
        lhs:
          BinOp:
            op: And
            lhs:
              Numeral: 1
            rhs:
              Numeral: 2
        rhs:
          Numeral: 3
    local: false
