lobster-lua/src/snapshots/lobster_lua__parser__tests__precedence_plus_both_sides_of_and.snap
---
source: src/parser.rs
expression: result
---
- Assignment:
    variable: x
    value:
      BinOp:
        op: And
        lhs:
          BinOp:
            op: Plus
            lhs:
              Numeral: 1
            rhs:
              Numeral: 2
        rhs:
          BinOp:
            op: Plus
            lhs:
              Numeral: 3
            rhs:
              Numeral: 4
    local: false
