lobster-lua/src/snapshots/lobster_lua__parser__tests__precedence_plus_left_associative.snap
---
source: src/parser.rs
assertion_line: 728
expression: result
---
- Assignment:
    lhs:
      Var: x
    rhs:
      BinOp:
        op: Plus
        lhs:
          BinOp:
            op: Plus
            lhs:
              Numeral: 1
            rhs:
              Numeral: 2
        rhs:
          Numeral: 3
    local: false
