lobster-lua/src/snapshots/lobster_lua__parser__tests__return_inside_block.snap
---
source: src/parser.rs
expression: result
---
- DoEnd:
    body:
      - Break
      - Return:
          - String: ""
